compiler/src/snapshots/compiler__grammar_test__snapshot_success@event_fn.tapir.snap
---
source: compiler/src/grammar_test.rs
expression: ast
input_file: compiler/src/snapshot_tests/grammar/event_fn.tapir
---
Script(
  imports: [],
  struct_declarations: [],
  property_declarations: [
    PropertyDeclaration(
      name: TypedIdent(
        ident: Ident(
          span: "[span]",
          ident: "int_prop",
        ),
        ty: Some(TypeWithLocation(
          t: Some(Int),
          name: "int",
          span: "[span]",
        )),
      ),
      span: "[span]",
    ),
  ],
  globals: [],
  functions: [
    Function(
      kind: Regular,
      name: "@toplevel",
      span: "[span]",
      statements: [],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
    Function(
      kind: Regular,
      name: "foo",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              Expression(
                span: "[span]",
                kind: Variable("int_prop"),
                meta: {},
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Variable("x"),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [
        TypedIdent(
          ident: Ident(
            span: "[span]",
            ident: "x",
          ),
          ty: Some(TypeWithLocation(
            t: Some(Int),
            name: "int",
            span: "[span]",
          )),
        ),
      ],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: Some(Span(
          file_id: FileId(0),
          start: 25,
          end: 30,
        )),
      ),
      meta: {},
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
