compiler/src/snapshots/compiler__grammar_test__snapshot_success@extern_functions.tapir.snap
---
source: crates/tapir-script/compiler/src/grammar_test.rs
expression: ast
input_file: crates/tapir-script/compiler/src/snapshot_tests/grammar/extern_functions.tapir
---
Script(
  property_declarations: [],
  globals: [],
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
  ],
  extern_functions: [
    ExternFunctionDefinition(
      name: "foo",
      span: "[span]",
      arguments: [
        FunctionArgument(
          span: "[span]",
          t: TypeWithLocation(
            t: Int,
            span: "[span]",
          ),
          name: Unresolved("a"),
        ),
        FunctionArgument(
          span: "[span]",
          t: TypeWithLocation(
            t: Fix,
            span: "[span]",
          ),
          name: Unresolved("b"),
        ),
      ],
      return_types: FunctionReturn(
        types: [
          TypeWithLocation(
            t: Int,
            span: "[span]",
          ),
        ],
        span: "[span]",
      ),
      meta: {},
    ),
    ExternFunctionDefinition(
      name: "bar",
      span: "[span]",
      arguments: [],
      return_types: FunctionReturn(
        types: [
          TypeWithLocation(
            t: Int,
            span: "[span]",
          ),
          TypeWithLocation(
            t: Fix,
            span: "[span]",
          ),
        ],
        span: "[span]",
      ),
      meta: {},
    ),
  ],
)
