compiler/src/snapshots/compiler__grammar_test__snapshot_success@globals.tapir.snap
---
source: crates/tapir-script/compiler/src/grammar_test.rs
expression: ast
input_file: crates/tapir-script/compiler/src/snapshot_tests/grammar/globals.tapir
---
Script(
  property_declarations: [],
  globals: [
    GlobalDeclaration(
      name: Ident(
        span: "[span]",
        ident: "counter",
      ),
      value: Expression(
        span: "[span]",
        kind: Integer(0),
        meta: {},
      ),
      span: "[span]",
    ),
    GlobalDeclaration(
      name: Ident(
        span: "[span]",
        ident: "max_value",
      ),
      value: Expression(
        span: "[span]",
        kind: Integer(100),
        meta: {},
      ),
      span: "[span]",
    ),
    GlobalDeclaration(
      name: Ident(
        span: "[span]",
        ident: "is_active",
      ),
      value: Expression(
        span: "[span]",
        kind: Bool(true),
        meta: {},
      ),
      span: "[span]",
    ),
    GlobalDeclaration(
      name: Ident(
        span: "[span]",
        ident: "speed",
      ),
      value: Expression(
        span: "[span]",
        kind: Fix,
        meta: {},
      ),
      span: "[span]",
    ),
  ],
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Assignment(
            idents: [
              Ident(
                span: "[span]",
                ident: "counter",
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: BinaryOperation(
                  lhs: Expression(
                    span: "[span]",
                    kind: Variable("counter"),
                    meta: {},
                  ),
                  operator: Add,
                  rhs: Expression(
                    span: "[span]",
                    kind: Integer(1),
                    meta: {},
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
  ],
  extern_functions: [],
)
